# interview-bot

./: .gitignore  devenv.nix  flake.nix  hello.py  pyproject.toml  requirements.txt
